[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/Scene/Prepare Scene/Panel_gun.png" type="Texture" id=1]
[ext_resource path="res://src/Scene/Prepare Scene/Panel_gun.gd" type="Script" id=2]

[node name="Panel_gun" type="Node2D"]
position = Vector2( 488.638, 290.302 )
script = ExtResource( 2 )

[node name="Button_exit" type="Button" parent="."]
margin_left = 170.0
margin_top = -226.0
margin_right = 204.0
margin_bottom = -194.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel_gun" type="Sprite" parent="."]
scale = Vector2( 0.535, 0.535 )
texture = ExtResource( 1 )

[node name="Gunlist" type="ItemList" parent="."]
margin_left = -172.851
margin_top = -189.472
margin_right = 170.149
margin_bottom = 83.5282
same_column_width = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info_gun" type="Node2D" parent="."]

[node name="Image" type="Sprite" parent="Info_gun"]
position = Vector2( -118.669, 155.611 )

[node name="Gun_name" type="Label" parent="Info_gun"]
margin_left = -162.042
margin_top = 200.624
margin_right = -122.042
margin_bottom = 214.624
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Damage" type="Label" parent="Info_gun"]
margin_left = 14.5753
margin_top = 128.605
margin_right = 54.5753
margin_bottom = 142.605
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Recoil" type="Label" parent="Info_gun"]
margin_left = 24.0063
margin_top = 186.906
margin_right = 64.0063
margin_bottom = 200.906
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Firerate" type="Label" parent="Info_gun"]
margin_left = 130.32
margin_top = 128.605
margin_right = 170.32
margin_bottom = 142.605
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Capacity" type="Label" parent="Info_gun"]
margin_left = 130.32
margin_top = 186.906
margin_right = 170.32
margin_bottom = 200.906
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Button_exit" to="." method="exit_pressed"]
[connection signal="item_selected" from="Gunlist" to="." method="item_selected"]
